# webgpu-moldsim

./: Cargo.toml  Config.toml  README.md  build.sh
resources/: defaults.toml  params.json
resources/spirv/: compute.spv  decay.spv  diffuse.spv  draw.spv
shaders/: compute.wgsl  decay.wgsl  diffuse.wgsl  draw.wgsl
src/: framework.rs  main.rs  params.rs  uniform.rs  util.rs
